[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/attack_button.png" type="Texture" id=1]
[ext_resource path="res://src/ui/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/ChangeSceneButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/attack_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://src/ui/RetryButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/UserInterface.gd" type="Script" id=7]
[ext_resource path="res://assets/jump_button.png" type="Texture" id=8]
[ext_resource path="res://assets/jump_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/arrow-clicked.png" type="Texture" id=10]
[ext_resource path="res://assets/arrow.png" type="Texture" id=11]
[ext_resource path="res://assets/pause_button.png" type="Texture" id=12]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -3.0
margin_right = 3.0
margin_bottom = -3.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 45.2548
margin_top = 33.9411
margin_right = 120.255
margin_bottom = 62.9411
text = "Score : %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch_buttons" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton_left" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 180.807, 587.395 )
rotation = 3.11615
scale = Vector2( 0.251543, 0.252281 )
normal = ExtResource( 11 )
pressed = ExtResource( 10 )

[node name="TouchScreenButton_right" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 232.749, 462.286 )
rotation = 0.00879563
scale = Vector2( 0.22724, 0.248056 )
normal = ExtResource( 11 )
pressed = ExtResource( 10 )

[node name="TouchScreenButton_Jump" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 876.639, 477.772 )
scale = Vector2( 0.831115, 0.892094 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )

[node name="TouchScreenButton_attack" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 749.36, 474.943 )
scale = Vector2( 0.831115, 0.892094 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )

[node name="TouchScreenButton_pause" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 896.611, 12.7279 )
normal = ExtResource( 12 )

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -308.0
margin_bottom = -191.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -202.0
margin_right = 195.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 6 )]
margin_right = 390.0
margin_bottom = 132.0

[node name="MainScreenButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 136.0
margin_right = 390.0
margin_bottom = 268.0
text = "Main Screen"
set_scene = null

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 272.0
margin_right = 390.0
margin_bottom = 404.0
[connection signal="pressed" from="touch_buttons/TouchScreenButton_left" to="." method="_on_TouchScreenButton_left_pressed"]
[connection signal="released" from="touch_buttons/TouchScreenButton_left" to="." method="_on_TouchScreenButton_left_released"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_right" to="." method="_on_TouchScreenButton_right_pressed"]
[connection signal="released" from="touch_buttons/TouchScreenButton_right" to="." method="_on_TouchScreenButton_right_released"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_Jump" to="." method="_on_TouchScreenButton_Jump_pressed"]
[connection signal="released" from="touch_buttons/TouchScreenButton_Jump" to="." method="_on_TouchScreenButton_Jump_released"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_attack" to="." method="_on_TouchScreenButton_attack_pressed"]
[connection signal="pressed" from="touch_buttons/TouchScreenButton_pause" to="." method="_on_TouchScreenButton_pause_pressed"]
